--- a/Dockerfile1
+++ b/Dockerfile1
@@ -1,2 +1,3 @@
 FROM nginx:latest
-COPY index.html /usr/share/nginx/html/index.html
+RUN git clone https://github.com/SaurabhAbhishek/nginx.html.git /usr/share/nginx/html/
+EXPOSE 5005
