--- a/Dockerfile1
+++ b/Dockerfile1
@@ -1,3 +1,3 @@
 FROM nginx:latest
-RUN git clone https://github.com/SaurabhAbhishek/nginx.html.git /usr/share/nginx/html/
-EXPOSE 5005
+RUN cp index.html /usr/share/nginx/html/index.html
+EXPOSE 8087
